voxalfa-core/src/tests/snapshots/voxalfa_core__tests__utils__range_not_allowed_error.snap
---
source: voxalfa-core/src/tests/utils.rs
expression: output_str
---
=== INPUT ===
[$] time={4,4} | voices={A}
---

[$] dynamics={f:0..3}

[A] |d :r !m :f ||

=== DIAGNOSTICS ===
error[E011]: range not allowed for this event
  ┌─ range_not_allowed_error.vfa:5:15
  │
5 │ [$] dynamics={f:0..3}
  │               ^^^^^^
