voxalfa-core/src/tests/snapshots/voxalfa_core__tests__utils__timestamp_range_exception_error.snap
---
source: voxalfa-core/src/tests/utils.rs
expression: output_str
---
=== INPUT ===
[$] time={4,4} | voices={A}
---

[$] dynamics={cre:1}

[A] |d :r !m :f ||

=== DIAGNOSTICS ===
error[E010]: expected a range for timestamp
  ┌─ timestamp_range_exception_error.vfa:5:15
  │
5 │ [$] dynamics={cre:1}
  │               ^^^^^

error[E032]: timestamp is unmatched
  ┌─ timestamp_range_exception_error.vfa:5:15
  │
5 │ [$] dynamics={cre:1}
  │               ^^^^^
