voxalfa-core/src/tests/snapshots/voxalfa_core__tests__utils__unknown_directive_error.snap
---
source: voxalfa-core/src/tests/utils.rs
expression: output_str
---
=== INPUT ===
;; @invalid foo 
[$] time={4,4} | voices={S}
---
[S] |d :r !m :f ||

=== DIAGNOSTICS ===
error[E033]: unknown compiler directive '@invalid'
  ┌─ unknown_directive_error.vfa:2:1
  │
2 │ ;; @invalid foo 
  │ ^^^^^^^^^^^^^^^^
